# crawl-x

./: .gitignore  README.md  README_zh.md  install.sh  install_gemini.sh  ssl_utils.py
.claude/commands/: review.md
.specs/: 2026-03-25-coinglass-mcp.md  2026-03-26-merge-crypto-mcp-servers.md  2026-03-31-wikipedia-mcp.md
binance-mcp/: SKILL.md  server.py
blockbeats-mcp/: SKILL.md  server.py
cmc-mcp/: SKILL.md  server.py
crypto-mcp/: SKILL.md  server.py
docs/superpowers/plans/: 2026-03-19-cookie-picker.md
docs/superpowers/specs/: 2026-03-19-cookie-picker-design.md
extensions/cookie-picker/: config.json  manifest.json  popup.css  popup.html  popup.js
financial-research-agent/: SKILL.md
grok-mcp/: README.md  SKILL.md  requirements.txt  server.py
macro-mcp/: SKILL.md  server.py
market-data-mcp/: SKILL.md  requirements.txt  server.py
news-mcp/: SKILL.md  server.py
polymarket-mcp/: SKILL.md  server.py
scrape-mcp/: SKILL.md  requirements.txt  server.py
scrapling-mcp/: SKILL.md
search-mcp/: SKILL.md  server.py
sentiment-mcp/: SKILL.md  server.py
social-mcp/: SKILL.md  server.py
tests/: conftest.py  pyproject.toml  test_crypto.py  test_fiscaldata.py  test_grok.py  test_macro.py  test_market.py  test_market_data.py  test_news.py  test_polymarket.py  test_scrape.py  test_search_mcp.py  test_sentiment.py  test_social.py
wikipedia-mcp/: SKILL.md  server.py
